# reverseaffinite

./: .gitignore  .gitlab-ci.yml  .pylintrc  AGENTS.md  Jenkinsfile  README.md  ROADMAP.md  SPRINT_PLAN.md  SPRINT_STATUS.md  build-appimage.sh  chat_context.md  getstarted.ps1  index.html  main.py  pyproject.toml  requirements.txt  reverseaffinity_effects.py  reverseaffinity_home.py  reverseaffinity_photo.py  reverseaffinity_video.py  sync.ps1  sync.sh
.github/workflows/: test.yml
cpp_editor/: CMakeLists.txt  build.sh
cpp_editor/include/: app_ui.h  canvas.h  panels.h
cpp_editor/src/: app_ui.cpp  canvas.cpp  filters.cpp  history.cpp  main.cpp  panels.cpp
cpp_editor/test/: CMakeLists.txt
docs/: blend_modes.md  project_architecture.md  shortcuts.md  sre_dashboard.html  user_guide.md
documentation/: index.html
editor/: _colorspace.py  app_ui.py  blend_modes.py  canvas.py  canvas_drawing.py  canvas_io.py  canvas_overlay.py  filters.py  gpu_accel.py  gradient.py  guides.py  history.py  i18n.py  layers.py  openchat.py  openconsole.py  panels.py  preferences_dialog.py  resources.py  settings.py  snapping.py  splash.py  timeline_widget.py  tool_icons.py  tool_palette.py  tools.py  transport_bar.py  video_engine.py  video_ffmpeg.py  video_mode.py
locale/: de_DE.json  en_US.json  es_ES.json  fr_FR.json  it_IT.json  ja_JP.json  pt_BR.json
plugins/: __init__.py
reverseaffinity/: home.py
reverseaffinity/effects/: __init__.py  effects_app.py
reverseaffinity/photo/: __init__.py
reverseaffinity/video/: __init__.py  video_app.py
scripts/: sre_dashboard.py
tests/: conftest.py  run_all.py  test_canvas.py  test_gui.py  test_integration.py  test_layers.py  test_performance.py  test_regressions.py  test_stress.py  test_tools.py
tools/: demo.py  extract_strings.py
