[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "reverseaffinity"
version = "0.1.0"
requires-python = ">=3.9"

[project.scripts]
reverseaffinity = "main:main"
reverseaffinity-photo = "editor.app_ui:main"
reverseaffinity-video = "reverseaffinity.video.video_app:main"
reverseaffinity-effects = "reverseaffinity.effects.effects_app:main"
reverseaffinity-home = "reverseaffinity.home:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gui: marks GUI tests requiring display (deselect with '-m \"not gui\"')",
    "stress: marks stress tests (deselect with '-m \"not stress\"')",
    "perf: marks performance benchmarks (deselect with '-m \"not perf\"')",
]
timeout = 60
timeout_method = "thread"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["editor"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if False:",
    "raise AssertionError",
    "raise NotImplementedError",
    "def __repr__",
]
